<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundimage"
    tools:context="com.hva.symposiumcheckin.MainActivity">

    <TextView
        android:id="@+id/nfcStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:text="@string/loading_nfc_text"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dbConnectionStatusView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/db_not_connected"
        android:textColor="#FF0000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/checkInStatusView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scanNFCImage"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:layout_marginBottom="-145dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/scanNFCImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/nfc_image"
        android:src="@drawable/nfc_scan_icon" />


    <TextView
        android:id="@+id/scanStudentCardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanNFCImage"
        android:gravity="center"
        android:text="@string/scan_student_text"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dbActionsContainer"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_above="@id/updateBedrijfspuntenButton"
        android:layout_marginBottom="00dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="#bcbcbc"
        android:gravity="bottom" />

    <Button
        android:id="@+id/updateBedrijfspuntenButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/update_bedrijfspunten" />

    <Button
        android:id="@+id/checkInViaStudentNumberButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/check_in_via_studentnummer" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nfcStatusView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/button_refresh" />

</RelativeLayout>
